changed cyf logo to align left, fixed bug with quiz code

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@ html {
   background-color: #e5e5e5;
 }
 
-.navbar {
+.navbar{
   background-color: #ffffff;
   width: 100%;
   top: 0;
@@ -31,6 +31,15 @@ html {
   font-family: "Roboto", sans-serif;
   height: 125px;
 }
+
+.links-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+/* .logo-container {
+  align-self: flex-start;
+} */
 
 .cyf-logo {
   height: 90px;
